--- a/views/caixa/menu.handlebars
+++ b/views/caixa/menu.handlebars
@@ -2,6 +2,9 @@
  {{#if error_msg}}
   <div class="invisible">erro,{{error_msg}}</div>
 {{/if}}
+ {{#if success_msg}}
+  <div class="invisible">sucesso,{{success_msg}}</div>
+{{/if}}
  <div class="container">    
     <div class="cardMenuCaixa">
       <h1>Menu de controle do caixa</h1>
