--- a/views/login/index.handlebars
+++ b/views/login/index.handlebars
@@ -17,7 +17,7 @@
         {{/if}}
         <div class="textfield">
           <label for="usuario">Usuário</label>
-          <input type="text" name="usuario" placeholder="Usuário" autocomplete="off"/>
+          <input type="text" name="usuario" id="usuarioLogin" placeholder="Usuário" autocomplete="off"/>
         </div>
         <div class="textfield">
           <label for="senha">Senha</label>
