--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -6,7 +6,8 @@
     <div class="line3"></div>
   </div>
   <ul class="nav-list">
-    <li><a href="/caixa">Caíxa</a></li>
+    <li><a href="/caixa">Caixa</a></li>
+    <li><a href="/clientes">Clientes</a></li>
     <li><a href="/estoque">Estoque</a></li>
     <li><a href="/relatorios">Relatórios</a></li>
     <li><a href="/usuarios">Usuários</a></li>
