--- a/views/estoque/menu.handlebars
+++ b/views/estoque/menu.handlebars
@@ -9,5 +9,6 @@
       <a  class="menu-estoque" href="/estoque/cadastro">Cadastro</a>
       <a  class="menu-estoque" href="/estoque/entrada">Entrada</a>
       <a  class="menu-estoque" href="/estoque/saida">Saída</a>
+      <a  class="menu-estoque" href="/fornecedores">Fornecedores</a>
     </div>
   </div>
