--- a/views/estoque/saida.handlebars
+++ b/views/estoque/saida.handlebars
@@ -28,7 +28,7 @@
           </div>
         </div>
         <div class="textfield">
-          <label for="motivo_saida">Motivo</label>
+          <label for="motivo_saida">*Motivo</label>
           <input type="text" name="motivo" id="motivo_saida" placeholder="Ex: Quebrou" autocomplete="off"/>
         </div>
       </div>
