--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,12 +1,12 @@
 <nav>
-  <div class="title logo">Cosmeticos</div>
+  <div class="title logo">REAL CHARME</div>
   <div class="mobile-menu">
     <div class="line1"></div>
     <div class="line2"></div>
     <div class="line3"></div>
   </div>
   <ul class="nav-list">
-    <li><a href="/caixa">Caixa</a></li>
+    <li><a href="/caixa">Financeiro</a></li>
     <li><a href="/clientes">Clientes</a></li>
     <li><a href="/estoque">Estoque</a></li>
     <li><a href="/relatorios">Relatórios</a></li>
@@ -46,7 +46,7 @@
   }
 
   a:hover {
-    opacity: 0.7;
+    opacity: 0.5;
   }
 
   .logo {
@@ -72,6 +72,7 @@
   .nav-list li {
     letter-spacing: 3px;
     margin-left: 32px;
+    align-self:center;
   }
 
   .mobile-menu {
