--- a/views/relatorio/estoque/qtdeMin.handlebars
+++ b/views/relatorio/estoque/qtdeMin.handlebars
@@ -16,7 +16,7 @@
         <th>Descrição</th>
         <th>Fabricante</th>
         <th>Qtde Min</th>
-        <th>Qtde</th>
+        <th>em Estoque</th>
       </tr>
     </thead>
     <tbody>
@@ -65,5 +65,13 @@
 
   th{
     background-color: #BF8C2C;
+  }
+
+  #qtdeMin {
+    width: 100px;
+  }
+
+  #qtde {
+    width: 120px;
   }
 </style>
