--- a/views/relatorio/fornecedor/fornecedor.handlebars
+++ b/views/relatorio/fornecedor/fornecedor.handlebars
@@ -6,35 +6,36 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Relatório de Vendas</h1>
+  <h1>Relatório por fornecedor</h1>
   <div class="data">Data: {{dtAtual}}</div>
   <hr>
   <div class="periodo">Periodo:&nbsp &nbsp{{dtIni}} &nbsp a &nbsp {{dtFim}}</div>
   <hr>
+  <div class="periodo">fornecedor: {{fornecedor}}</div>
+  <hr>
   <table>
       <thead>
         <tr>
-          <th>N° da venda</th>
-          <th>Data da venda</th>
-          <th>Valor da venda</th>
-          <th>Vendedor</th>
+          <th>Produto</th>
+          <th class="pq">Qtde</th>
+          <th>Data</th>
+          <th>Valor</th>
         </tr>
       </thead>
       <tbody>
-        {{#each vendas}}
+        {{#each dados}}
           <tr>
-            <td>{{id}}</td>
-            <td>{{dataVd}}</td>
-            <td>R$ {{vlorig}}</td>
-            <td>{{nome}}</td>
+            <td>{{codigo}} - {{descricao}}</td>
+            <td class="pq">{{qtde}}</td>
+            <td>{{data}}</td>
+            <td>{{valor}}</td>
           </tr>
         {{/each}}
       </tbody>
       <tfoot>
-        <tr style="height: 5px;"></tr>
         <tr>
-          <td colspan="2"> Total das vendas no periodo</td>
-          <td colspan="2">R$ &nbsp {{total}}</td>
+          <td colspan="2">TOTAL</td>
+          <td colspan="2">{{total}}</td>
         </tr>
       </tfoot>
   </table>
@@ -68,7 +69,8 @@
     text-align: center;
     border: 1px solid #be9b5a;
     margin: 0;
-    padding: 0;
+    padding: 5px;
+    font-size: 1.5rem;
   }
 
   hr {
@@ -79,10 +81,12 @@
     background-color: #BF8C2C;
   }
 
-  tfoot > tr{
-    padding: 100px;
-    font-size: 1.2rem;
+  table > tfoot {
+    background-color: #BF8C2C;
     font-weight: bold;
-    background-color: #be9b5a;
+  }
+
+  .pq {
+    width: 50px;
   }
 </style>
