--- a/views/usuarios/index.handlebars
+++ b/views/usuarios/index.handlebars
@@ -66,7 +66,7 @@
             </div>
             <div class="line">
               <button class="btn-salvar" id="btnAlterarSenha">Alterar senha</button>
-              <button class="btn-salvar" id="btnCancelAlterarSenha">Voltar</button>
+              <button class="btn-salvar" id="btnCancelAlterarSenhaAdmin">Voltar</button>
             </div>
             </div>
           </div>
