--- a/src/public/css/geral.css
+++ b/src/public/css/geral.css
@@ -50,8 +50,9 @@
     display: flex;
     width: 30vw;
     height: 10vh;
-    top: 20vh;
-    left: 35px;;
+    top: 5vh;
+    /* left: 35px; */
+    margin: 0 auto;
     border-radius: 8px;
     border-width: 5px;
     border-style: solid;
@@ -121,7 +122,7 @@ text-align: center;
   overflow-x: hidden;
 }
 
-.card > h1, .cardModal > h1, .cardCaixa > h1, .cardEstoque > h1, .cardMenuEstoque > h1, .cardMenuCaixa > h1, .cardFecha > h1, .cardMenuRelatorio > h1 {
+.card > h1, .cardModal > .line > h1,  .cardModal > .lineCaixa > h1,.cardCaixa > h1, .cardEstoque > h1, .cardMenuEstoque > h1, .cardMenuCaixa > h1, .cardFecha > h1, .cardMenuRelatorio > h1 {
   color: #BF8C2C;
   font-weight: 800;
   margin: 0 0 10px 0;
@@ -139,10 +140,60 @@ text-align: center;
   font-size: 1.2rem;
 }
 
-.line, .lineFecha{
+.subMenu {
+width: 90%;
+border: 1px solid #e7b049;
+border-radius: 8px;
+justify-content: center;
+padding: 10px;
+margin: 5px 0;
+}
+
+.subMenu > .line {
+  justify-content: center;
+}
+
+.subMenu > h4 {
+  text-align: center;
+  color: #e7b049;
+}
+
+.line, .lineFecha, .cardModal > .lineCaixa, .lineRel{
   display: flex;
   width: 100%;
   flex-direction: row;
+}
+
+.cardModal > .lineCaixa {
+  justify-content:flex-end;
+  align-items: center;
+}
+
+.vlTotal {
+  display: flex;
+  width: 40%;
+  align-items: center ;
+  justify-content: center;
+  margin: 0 0 25px 0;
+  flex-direction: column;
+
+}
+
+.vlTotal > label {
+  color: #BF8034;
+  font-size: 1.5rem;
+  padding-bottom: 10px;
+}
+
+.vlTotal > input {
+  width: 200px;
+  border-radius: 8px;
+  font-size: 1.7rem;
+  background: #514869;
+  padding: 0 5px;
+  border: 0;
+  color: #aaa;
+  text-align: center;
 }
 
 .lineFecha {
@@ -158,7 +209,7 @@ text-align: center;
   border-radius: 5px;
 }
 
-.textfield {
+.textfield, .textfieldbox {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -171,7 +222,7 @@ text-align: center;
   width: 30%;
 }
 
-.textfield > input, .btnMenu, select, select-cliente {
+.textfield > input, .btnMenu, .select, .select-cliente, .select-forn, .textfieldbox > input  {
   width: 100%;
   border: none;
   border-radius: 10px;
@@ -184,7 +235,7 @@ text-align: center;
   box-sizing: border-box;
 }
 
-.textfield > label, select > label, select-cliente > label {
+.textfield > label, .select > label, .select-cliente > label, .select-forn > label, .textfieldbox label {
   color: #f0ffffde;
   margin-bottom: 10px;
 }
@@ -192,6 +243,11 @@ text-align: center;
 .textfield > input::placeholder {
   color: #f0ffff94;
 }
+
+.textfieldbox {
+  width: 50px;
+}
+
 
 .btn-salvar ,.btn-login, .btn-finalizar, .btn-finalizar-compra, .btnTrocarSenha {
   width: 100%;
@@ -233,7 +289,6 @@ text-align: center;
   margin: 25px;
   border: none;
   border-radius: 8px;
-  /* outline: none; */
   text-transform: uppercase;
   font-weight: 800;
   letter-spacing: 3px;
@@ -243,6 +298,7 @@ text-align: center;
   box-shadow: 0px 10px 40px -12px #593202;
   text-decoration: none;
   text-align: center;
+  align-self: center;
 }
 
 .btnMenu {
@@ -270,12 +326,12 @@ text-align: center;
   overflow: auto;
 }
 
-.select , .select-pg, .select-acesso, .select-prod, .select-cliente{
+.select , .select-pg, .select-acesso, .select-prod, .select-cliente, .select-forn{
   position: relative;
   width: 100%;
 }
 
-.btn-select, .btn-select-pg, .btn-select-acesso, .btn-select-prod, .btn-select-cliente {
+.btn-select, .btn-select-pg, .btn-select-acesso, .btn-select-prod, .btn-select-cliente, .btn-select-forn {
   padding: 15px 8px;
   width: 100%;
   border-radius: 10px;
@@ -285,11 +341,11 @@ text-align: center;
   color: #f0ffff94;
 }
 
-.btn-select span, .btn-select-pg span, .btn-select-acesso span, .btn-select-prod span, .btn-select-cliente span{
+.btn-select span, .btn-select-pg span, .btn-select-acesso span, .btn-select-prod span, .btn-select-cliente span, .btn-select-forn span{
   width: 100%;
 }
 
-.select-content, .select-content-pg, .select-content-acesso, .select-content-prod, .select-content-cliente{
+.select-content, .select-content-pg, .select-content-acesso, .select-content-prod, .select-content-cliente, .select-content-forn{
   border: 1px solid gray;
   border-radius: 5px;
   padding: 10px;
@@ -302,7 +358,7 @@ text-align: center;
   color: #f0ffff94;
 }
 
-.select-content input, .select-content-pg input, .select-content-prod input, .select-content-cliente input{
+.select-content input, .select-content-pg input, .select-content-prod input, .select-content-cliente input, .select-content-forn input{
   padding: 3px;
   width: 90%;
   margin: 5px;
@@ -311,15 +367,15 @@ text-align: center;
   border-radius: 5px;
 }
 
-.select-content .options, .select-content-pg .options-pg, .select-content-acesso .options-acesso, .select-content-prod .options-prod, .select-content-cliente .options-cliente{
-  max-height: 250px;
+.select-content .options, .select-content-pg .options-pg, .select-content-acesso .options-acesso, .select-content-prod .options-prod, .select-content-cliente .options-cliente, .select-content-forn .options-forn{
+  max-height: 200px;
   list-style: none;
   overflow: auto;
   max-height: 100px;
   font-size: 14px;
 }
 
-.options li, .options-pg li, .options-acesso li, .options-prod li, .options-cliente li{
+.options li, .options-pg li, .options-acesso li, .options-prod li, .options-cliente li, .options-forn li{
   cursor: pointer;
   overflow: hidden;
   white-space: nowrap;
@@ -328,12 +384,12 @@ text-align: center;
   border-radius: 2px;
 }
 
-.options li:hover, .options-pg li:hover, .options-acesso li:hover, .options-prod li:hover, .options-cliente li:hover{
+.options li:hover, .options-pg li:hover, .options-acesso li:hover, .options-prod li:hover, .options-cliente li:hover, .options-forn li:hover{
   background-color: #aaa;
   color: #000;
 }
 
-.select .active, .select-pg .active, .select-acesso .active, .select-prod .active, .select-cliente .active{
+.select .active, .select-pg .active, .select-acesso .active, .select-prod .active, .select-cliente .active, .select-forn .active{
   display: block;
 }
 
@@ -367,8 +423,8 @@ text-align: center;
 }
 
 .tab-fechaItens tbody {
-display: inline-block;
-background: #f0ffff84;
+  display: inline-block;
+  background: #f0ffff84;
 }
 
 .tab-caixa th, .tab-fecha th {
@@ -393,8 +449,9 @@ background: #f0ffff84;
   text-align: center;
   background-color: #f0ffff94;
 }
+
 tbody .venda {
-  height: 50px;
+  max-height: 150px;
   overflow: auto;
 }
 
@@ -448,13 +505,14 @@ tbody .venda {
   position: absolute;
   z-index: 2;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background: rgba(200,200,200, 0.7);
   align-content: center;
+  margin: 0;
 }
 
 .modal .cardModal {
-  margin: auto;
+  margin: 0 ;
 }
 
 .active {
