--- a/views/estoque/entrada.handlebars
+++ b/views/estoque/entrada.handlebars
@@ -7,10 +7,13 @@
 {{/if}}
 <form action="" method="post" id="form">
   <input type="hidden" id="prod-select"  class="invisible">
+  <input type="hidden" id="forn-select"  class="invisible">
+  <input type="hidden" id="id_forn" name="idForn" class="invisible"/>
   <input type="hidden" id="id_estoque" name="id" class="invisible"/>
   <input type="hidden" id="cod_estoque" name="codigo" class="invisible"/>
   <input type="hidden" id="desc_estoque" name="descricao" class="invisible"/>
   <input type="hidden" id="qtdeMin_estoque" name="qtdeMin" class="invisible"/>
+  <input type="hidden" id="custoOrig_estoque" name="custoOrig" class="invisible"/>
   <div class="container">    
     <div class="cardEstoque">
       <h1>Entrada de Estoque</h1>
@@ -40,11 +43,20 @@
       </div>
       <div class="line">
         <div class="textfield">
-          <label for="fornecedor_estoque">Fornecedor</label>
-          <input type="text" name="fornecedor" id="fornecedor_estoque" placeholder="Ex: Risque" autocomplete="off"/>
+          <label for="btn-select-forn">Fornecedor</label>
+          <div class="select-forn">
+            <div class="btn-select-forn">
+              <span>Selecione um fornecedor</span>
+            </div>
+            <div class="select-content-forn">
+              <input type="text" id="input-select-forn">
+              <ul class="options-forn">
+              </ul>
+            </div>
+          </div>
         </div>
         <div class="textfield">
-          <label for="nota_estoque">Nota Fiscal</label>
+          <label for="nota_estoque">*Nota Fiscal</label>
           <input type="text" name="nota" id="nota_estoque" placeholder="Ex: E123" autocomplete="off"/>
         </div>
       </div>
@@ -62,7 +74,7 @@
           <input type="text" name="venda" id="venda_estoque" placeholder="0,00" readonly/>
         </div>
         <div class="textfield cod">
-          <label for="qtdeInsert_estoque">**Qtde a adcionar</label>
+          <label for="qtdeInsert_estoque">*Qtde a adcionar</label>
           <input type="number" name="qtdeInsert" id="qtdeInsert_estoque" placeholder="Ex: 50" autocomplete="off" min="1" />
         </div>
 
