--- a/views/relatorio/estoque/controle.handlebars
+++ b/views/relatorio/estoque/controle.handlebars
@@ -16,7 +16,7 @@
         <th>Descrição</th>
         <th>Fabricante</th>
         <th>Qtde Min</th>
-        <th>Qtde</th>
+        <th>em Estoque</th>
       </tr>
     </thead>
     <tbody>
@@ -41,10 +41,6 @@ const qtm = parseInt(qtdeMin[x].textContent)
   if(qt < qtm){
     dados[x].style.color = 'red'
     dados[x].style.fontWeight = 'bold'
-    /*qtdeMin[x].style.color = 'red'
-    qtdeMin[x].style.fontWeight = 'bold'
-    qtde[x].style.color = 'red'
-    qtde[x].style.fontWeight = 'bold' */
   }
 }
 
@@ -83,5 +79,13 @@ const qtm = parseInt(qtdeMin[x].textContent)
 
   th{
     background-color: #BF8C2C;
+  }
+
+  #qtde {
+    width: 120px;
+  }
+
+  #qtdeMin {
+    width: 100px;
   }
 </style>
