--- a/views/relatorio/menu.handlebars
+++ b/views/relatorio/menu.handlebars
@@ -9,9 +9,27 @@
     <div class="cardMenuRelatorio">
       <h1>Menu de Relatórios</h1>
       <div class="msg" id="msg"><p id="msgtext"></p></div>
-      <a  class="menu-relatorios" href="relatorios/venda">Relatório de Venda</a>
-      <a  class="menu-relatorios" href="relatorios/estoque/controle">Relatório de controle de estoque</a>
-      <a  class="menu-relatorios" href="relatorios/estoque/qtdeMin">Relatório de estoque em qtde mínima</a>
-      <a  class="menu-relatorios" href="relatorios/estoque/movimentacao">Relatório de movimentação de estoque</a>
+      <div class="subMenu">
+        <h4>Financeiros</h4>
+        <div class="line">
+        <a  class="menu-relatorios" href="relatorios/venda">Relatório de Venda</a>
+        <a  class="menu-relatorios" href="relatorios/lucro">Relatório de Lucro(liquido / bruto)</a>
+        <a  class="menu-relatorios" href="relatorios/conta">Relatório de contas fixas</a>
+        </div>
+      </div>
+      <div class="subMenu">
+        <h4>Estoque</h4>
+        <div class="line">
+          <a  class="menu-relatorios" href="relatorios/estoque/controle">Relatório de controle de estoque</a>
+          <a  class="menu-relatorios" href="relatorios/estoque/qtdeMin">Relatório de estoque em qtde mínima</a>
+          <a  class="menu-relatorios" href="relatorios/estoque/movimentacao">Relatório de movimentação de estoque</a>
+        </div>
+      </div>
+      <div class="subMenu">
+        <h4>Fornecedor</h4>
+        <div class="line">
+          <a  class="menu-relatorios" href="relatorios/fornecedor">Relatório por fornecedor</a>
+        </div>
+      </div>
     </div>
   </div>
