--- a/views/estoque/entrada.handlebars
+++ b/views/estoque/entrada.handlebars
@@ -71,7 +71,7 @@
         </div>
         <div class="textfield cod">
           <label for="venda_estoque">Venda R$</label>
-          <input type="text" name="venda" id="venda_estoque" placeholder="0,00" readonly/>
+          <input type="text" name="venda" id="venda_estoque" placeholder="Ex: 1,73" autocomplete="off"/>
         </div>
         <div class="textfield cod">
           <label for="qtdeInsert_estoque">*Qtde a adcionar</label>
