--- a/views/relatorio/menu.handlebars
+++ b/views/relatorio/menu.handlebars
@@ -23,6 +23,7 @@
           <a  class="menu-relatorios" href="relatorios/estoque/controle">Relatório de controle de estoque</a>
           <a  class="menu-relatorios" href="relatorios/estoque/qtdeMin">Relatório de estoque em qtde mínima</a>
           <a  class="menu-relatorios" href="relatorios/estoque/movimentacao">Relatório de movimentação de estoque</a>
+          <a  class="menu-relatorios" href="relatorios/historico">Relatório de historico de preço</a>
         </div>
       </div>
       <div class="subMenu">
